# IG-JEPA

./: .gitignore  README.md
.claude/: settings.json
archive/v1_signals/: done_cifar10_dino.json  done_dtd_dino.json  done_flowers102_dino.json  done_lits_kg_fewshot.json  done_lits_kg_jepa.json  done_lits_kg_jepa_v2.json  done_lits_medical_v2.json  done_pancreas_kg_jepa.json  done_pancreas_kg_jepa_v2.json  done_pancreas_medical_v2.json  done_stl10_dino.json  done_tinyimagenet_dino.json.old  fast_exp1.json  flowers102.json  full_stl10_all.json  ggjepa_cifar10_50ep.json  graphonly_enriched.json  log_kg_jepa.txt  log_lits_v2.txt  log_pancreas_v2.txt  lowlabel_cifar10.json  lowlabel_tinyimagenet.json  table3_ablation.json  table3_cifar10.json  table3_tinyimagenet.json  table4_cifar10.json  table4_tinyimagenet.json  topology_14dim.json  topology_attribution.json
archive/v1_src/: generate_medical_figure.py  run_ablation_table3.py  run_gap_close.py  run_graphonly_enriched.py  run_imagenet100.py  run_kg_jepa.py  run_lowlabel.py  run_medical_v2.py  run_table3_all.py  run_table4.py
fastloops/: Cargo.toml
fastloops/src/: lib.rs
signals/: done_cifar10_dino.json  done_stl10_dino.json  done_tinyimagenet_dino.json
src/: run_ablation_table3.py  run_cnn_jepa.py  run_dino.py  run_gap_close.py  run_graphonly_enriched.py  run_imagenet100.py  run_kg_jepa.py  run_lowlabel.py  run_medical_v2.py  run_table3_all.py  run_table4.py
