[package]
name = "fastloops"
version = "0.1.0"
edition = "2021"

[lib]
name = "fastloops"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311"] }
numpy = "0.21"
ndarray = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
